--- a/public/admin-register.html
+++ b/public/admin-register.html
@@ -22,6 +22,35 @@
       <input type="text" id="middleName" placeholder="Middle Name" required />
       <input type="text" id="lastName" placeholder="Last Name" required />
       <input type="text" id="username" placeholder="Username" required />
+      <label for="department">Assign Department:</label>
+      <select id="department" required>
+        <option value="">-- Select Department --</option>
+        <option value="General Agriculture">General Agriculture</option>
+        <option value="Agribusiness">Agribusiness</option>
+        <option value="Forestry">Forestry</option>
+        <option value="Environmental Science">Environmental Science</option>
+        <option value="Civil Engineering">Civil Engineering</option>
+        <option value="Electrical Engineering">Electrical Engineering</option>
+        <option value="Mechanical Engineering">Mechanical Engineering</option>
+        <option value="Architecture">Architecture</option>
+        <option value="Nursing">Nursing</option>
+        <option value="Public Health">Public Health</option>
+        <option value="Midwifery">Midwifery</option>
+        <option value="Pharmacy">Pharmacy</option>
+        <option value="Primary Education">Primary Education</option>
+        <option value="Secondary Education">Secondary Education</option>
+        <option value="Special Education">Special Education</option>
+        <option value="English">English</option>
+        <option value="Social Sciences">Social Sciences</option>
+        <option value="Biological Sciences">Biological Sciences</option>
+        <option value="Chemistry">Chemistry</option>
+        <option value="Physics">Physics</option>
+        <option value="Mathematics">Mathematics</option>
+        <option value="Accounting">Accounting</option>
+        <option value="Management">Management</option>
+        <option value="Economics">Economics</option>
+        <option value="Public Administration">Public Administration</option>
+      </select>
       <input type="password" id="password" placeholder="Password" required />
       <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
       <button type="submit">Register</button>
