--- a/public/student.html
+++ b/public/student.html
@@ -127,6 +127,7 @@
         <option value="Accounting">Accounting</option>
         <option value="Management">Management</option>
         <option value="Economics">Economics</option>
+        <option value="computer">Computer Science</option>
         <option value="Public Administration">Public Administration</option>
       </select>
 
